<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CNC Distance Calculator</string>
    <string name="get_line_instruction">Selecciona tu tipo de linea:</string>
    <string name="action_settings">Settings</string>
    <string name="alpha_tag"> alpha:</string>
    <string name="radius_tag"> R:</string>
    <string name="button_text">OK</string>
    <string name="button2_text">Volver a comenzar</string>
    <string-array name="lines_array">
   		<item>Horizontal</item>
	    <item>Vertical</item>
	</string-array>
	<string name="get_case_instruction">Selecciona tu caso:</string>
	<string name="get_attributes_instruction">Ingresa las medidas:</string>
	<string name="display_lengths_comment">Las distancias son:</string>
	<string name="length_one_tag"> Distancia 1: </string>
	<string name="length_two_tag"> Distancia 2: </string>
	<string name="length_three_tag"> Distancia 3: </string>
	<string name="length_four_tag"> Distancia 4: </string>

</resources>
