<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_attributes_instruction"
        android:background="#FFFF00"
        android:textSize="30sp" />
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center">
	    <ImageView
	        android:id="@+id/selected_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" 
	        android:text="@string/alpha_tag" />
	    <EditText android:id="@+id/alpha"
	        android:inputType="numberDecimal"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" 
	        android:text="@string/radius_tag" />
	    <EditText android:id="@+id/radius"
	        android:inputType="numberDecimal"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" 
	        android:text="Punto de dibujante X:" />
	    <EditText android:id="@+id/draw_point_x"
	        android:inputType="numberDecimal"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" 
	        android:text="Punto de dibujante Y:" />
	    <EditText android:id="@+id/draw_point_y"
	        android:inputType="numberDecimal"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:onClick="sendAttributes" />
</LinearLayout>